# toydb

./: Cargo.toml  README.md  history.txt
crates/toy_sql_execution/: Cargo.toml
crates/toy_sql_execution/src/: error.rs  lib.rs  row.rs  table.rs
crates/toy_sql_parser/: Cargo.toml
crates/toy_sql_parser/src/: ast.rs  error.rs  lib.rs  parse.rs  value.rs
crates/toy_sql_parser/src/commands/: create.rs  insert.rs  select.rs
crates/toy_sql_repl/: Cargo.toml  history.txt
crates/toy_sql_repl/src/: display.rs  main.rs
