[package]
name = "toy_sql_execution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = {workspace = true}
serde = {workspace = true}
toy_sql_parser = { path = "../toy_sql_parser" }
thiserror = {workspace = true}
derive_more = {workspace = true}