[package]
name = "toy_sql_repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "11.0.0", features = ["derive"] }
toy_sql_parser = { path = "../toy_sql_parser" }
toy_sql_execution = { path = "../toy_sql_execution" }
miette = {workspace = true, features = ["fancy"]}
tabled = "0.12.0"
